begin showme; pass network stats to UI

--- a/app/index.html
+++ b/app/index.html
@@ -19,5 +19,13 @@
   <br><br><button id="send" onclick="sendCoin()">Send MetaCoin</button>
   <br><br>
   <span id="status"></span>
+
+  <h1>Showme Tests</h1>
+  <p id="accounts"></p>
+  <h2 id="mainacct"></h2>
+
+  <h3 id="owner"></h3>
+
+
 </body>
 </html>
