--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,9 @@
   <p id="accounts"></p>
   <h2 id="mainacct"></h2>
 
+  <p>Owner:</p>
   <h3 id="owner"></h3>
+  <br><button id="getowner" onclick="getOwner()">Show my contract</button>
 
 
 </body>
