pull balances from chain in addition to contract balance

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <h1>MetaCoin</h1>
   <h2>Example Truffle Dapp</h2>
   <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
+  <h3>You have <span class="black"><span id="ethbalance"></span> WEI</span></h3>
 
   <br>
   <h1>Send</h1>
