--- a/app/index.html
+++ b/app/index.html
@@ -8,33 +8,37 @@
   <script src="./myapp.js"></script>
 </head>
 <body>
-  <h1>MetaCoin</h1>
-  <h2>Example Truffle Dapp</h2>
-  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
-  <h3>You have <span class="black"><span id="ethbalance"></span> WEI</span></h3>
+
+  <h1>Network Stats</h1>
+  
+  <h4>Accounts:</h4>
+  <p id="accounts"></p>
+
+  <h4>Account:</h4>
+  <p id="mainacct"></p>
+
+  <h4>Coinbase:</h4>
+  <p id="coinbase"></p>
+
+  <h4>Account balances:</h4>
+  
+  <h5>META: <span id="balance" class="black"></span></h5>
+  <h5>WEI: <span id="ethbalance" class="black"></span></h5>
+
+  <h1>Execute Contract</h1>
+  <h4>Transaction Owner:</h4>
+  <p id="owner"></p>
+  <h4>Transaction initiated by:</h4>
+  <p id="txsender"></p>
+  <button id="showme" onclick="showme()">Show my contract</button>
 
   <br>
-  <h1>Send</h1>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
+  <h4>Metacoin Send</h4>
+  <label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
   <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
   <br><br><button id="send" onclick="sendCoin()">Send MetaCoin</button>
   <br><br>
   <span id="status"></span>
-
-  <h1>Showme Tests</h1>
-
-  <p>Accounts: </p>
-  <p id="accounts"></p>
-
-  <p>Account: </p>
-  <h2 id="mainacct"></h2>
-
-  <p>Transaction Owner:</p>
-  <h3 id="owner"></h3>
-  <p>Transaction initiated by:</p>
-  <h3 id="txsender"></h3>
-
-  <br><button id="showme" onclick="showme()">Show my contract</button>
 
 
 </body>
