--- a/app/index.html
+++ b/app/index.html
@@ -50,18 +50,48 @@
       </table>
   </div>
 
+  <div class="panel panel-default">
+    <div class="panel-heading">Account Balances</div>
+      <table class="table">
+          <thead> 
+            <tr> 
+              <th>Account</th> 
+              <th>MetaCoin</th> 
+              <th>Wei</th> 
+            </tr> 
+          </thead> 
+          <tbody> 
+            <tr> 
+                <th scope="row" id="mainacct"></th> 
+                <td id="balance"></td> 
+                <td id="ethbalance"></td> 
+            </tr> 
+          </tbody> 
 
-  <h4>Account balances:</h4>
-  
-  <h5>META: <span id="balance" class="black"></span></h5>
-  <h5>WEI: <span id="ethbalance" class="black"></span></h5>
+      </table>
+  </div>
 
-  <h1>Execute Contract</h1>
-  <h4>Transaction Owner:</h4>
-  <p id="owner"></p>
-  <h4>Transaction initiated by:</h4>
-  <p id="txsender"></p>
-  <button id="showme" onclick="showme()">Show my contract</button>
+  <div class="panel panel-default">
+    <div class="panel-heading">Transaction Execution Summary</div>
+      <table class="table">
+          <tbody> 
+            <tr> 
+                <th scope="row">Transaction Block</th> 
+                <td id="">??</td> 
+            </tr> 
+            <tr> 
+                <th scope="row">Transaction Owner:</th> 
+                <td id="owner"></td> 
+            </tr>   
+            <tr> 
+                <th scope="row">Initiated by:</th> 
+                <td id="txsender"></td> 
+            </tr>   
+          </tbody> 
+
+      </table>
+  </div>
+  <button id="showme" onclick="showme()">Execute Transaction</button>
 
   <br>
   <h4>Metacoin Send</h4>
