innerhtml class; jquery --> cant require? clean policies contract

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>MetaCoin - Default Truffle App</title>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -16,7 +18,6 @@
 
   <link href="./app.css" rel='stylesheet' type='text/css'>
   <script src="./app.js"></script>
-  <script src="./myapp.js"></script>
 </head>
 
 <body>
