solidity debugging; literal vaues & dynamically-sized data

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,10 @@
                 <th scope="row">Coinbase:</th> 
                 <td id="coinbase"></td> 
             </tr>   
+            <tr> 
+                <th scope="row">Policies Addr:</th> 
+                <td id=""></td> 
+            </tr>   
           </tbody> 
 
       </table>
@@ -101,7 +105,6 @@
   <br><br><button id="send" onclick="sendCoin()">Send MetaCoin</button>
   <br><br>
   <span id="status"></span>
-
 
 </body>
 </html>
